src-force/logger/objects/WELLog__e/WELLog__e.object-meta.xml
<CustomObject>
    <label>WELLog</label>
    <pluralLabel>WELLogs</pluralLabel>
</CustomObject>