src-force/logger/objects/WELLog__e/fields/CTX__c.field-meta.xml
<CustomField>
    <fullName>CTX__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>