src-force/logger/objects/WELLog__e/fields/TXN__c.field-meta.xml
<CustomField>
    <fullName>TXN__c</fullName>
    <label>Transaction</label>
    <length>18</length>
    <type>Text</type>
</CustomField>